app name changed for release

--- a/app/src/release/res/values/strings.xml
+++ b/app/src/release/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Adoddle Field</string>
+    <string name="app_name">Send Greeting</string>
     <string name="banner_home_footer">ca-app-pub-9184597918832012/9650889580</string>
 
 </resources>
