--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,8 @@
     </string-array>
 
     <string-array name="diwali_gujarati_message_list">
-        <item>🙏</item>
+        <item>આપને મારા તરફથી દિવાળી ની ખુબ ખુબ શુભેચ્છા..</item>
+        <item>આપ સહુને દિવાળીની ખૂબ ખૂબ શુભેચ્છાઓ સહ, નવા વર્ષે ઉગતા  સૂર્યનાં, પ્રકાશિત કિરણોથી ભરપુર, મંગલ જીવન હો, એવી પ્રભુ પાસે અભ્યર્થના …!..જયશ્રીકૃષ્ણ.</item>
     </string-array>
 
     <string-array name="diwali_hindi_message_list">
@@ -28,7 +29,7 @@
     </string-array>
 
     <string-array name="new_year_gujarati_message_list">
-        <item>New Year Gujarati Messages</item>
+        <item>આપને નુતન વર્ષની ખુબ ખુબ શુભકામના,આપનું આવનાર વર્ષ સ્નેહ ,ઉલ્લાસ અને પ્રફૂલ્લીતા થી પરિપૂર્ણ રહે એવી મારી અભિલાષા , આમતો પ્રત્યેક વર્ષ આપણા પ્રયાસ પર નિર્ભર છે પણ શુભ કામનાઓ આપણામાં ઉત્સાહ ,મનોબળ , અને સકારાત્મક ઉર્જાનું સિંચન કરે છે આપ સર્વ કામો સકારાત્મક દ્રષ્ટિકોણ થી કરો અને પરિણામો પણ સકારાત્મક અને સંતોષકારક બને તેવી અમારી શુભકામના.</item>
     </string-array>
 
     <string-array name="new_year_hindi_message_list">
