New year english message added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,22 +18,88 @@
     <string-array name="diwali_gujarati_message_list">
         <item>આપને મારા તરફથી દિવાળી ની ખુબ ખુબ શુભેચ્છા..</item>
         <item>આપ સહુને દિવાળીની ખૂબ ખૂબ શુભેચ્છાઓ સહ, નવા વર્ષે ઉગતા  સૂર્યનાં, પ્રકાશિત કિરણોથી ભરપુર, મંગલ જીવન હો, એવી પ્રભુ પાસે અભ્યર્થના …!..જયશ્રીકૃષ્ણ.</item>
+        <item>આપને મારા તરફથી દિવાળી ની ખુબ ખુબ શુભેચ્છા..</item>
+        <item>આપને મારા તરફથી દિવાળી ની ખુબ ખુબ શુભેચ્છા..</item>
+        <item>આપને મારા તરફથી દિવાળી ની ખુબ ખુબ શુભેચ્છા..</item>
     </string-array>
 
     <string-array name="diwali_hindi_message_list">
         <item>Diwali Hindi Messages</item>
+        <item>Diwali Hindi Messages</item>
+        <item>Diwali Hindi Messages</item>
+        <item>Diwali Hindi Messages</item>
+        <item>Diwali Hindi Messages</item>
+        <item>Diwali Hindi Messages</item>
+        <item>Diwali Hindi Messages</item>
+        <item>Diwali Hindi Messages</item>
+        <item>Diwali Hindi Messages</item>
+        <item>Diwali Hindi Messages</item>
+        <item>Diwali Hindi Messages</item>
+        <item>Diwali Hindi Messages</item>
+        <item>Diwali Hindi Messages</item>
+        <item>Diwali Hindi Messages</item>
+        <item>Diwali Hindi Messages</item>
+        <item>Diwali Hindi Messages</item>
+
     </string-array>
 
     <string-array name="new_year_english_message_list">
-        <item>New Year English Messages</item>
+        <item>Nights are Dark,\nbut Days are Light,\nWish your Life will always be Bright.\nSo my Dear don’t get Fear Coz,\nGod Gift us a “BRAND NEW YEAR”\n* HAPPY NEW YEAR *</item>
+        <item>I met love, health, peace &amp; joy,\nThey needed a permanent place to stay.\nI gave them your address\nhope they arrived safely\n“Happy New Year”</item>
+        <item>When you are lonely, I wish you Love!\n When you are down, I wish you Joy!\nWhen you are troubled I wish you Peace!\nWhen things seem empty, I wish you Hope!\nWith all above wishes, Have A Very Happy New Year.</item>
+        <item>Another year of success and happiness has passed.\n With every new year, comes greater challenges and obstacles in life.\nI wish you courage, hope and faith to overcome all the hurdles you face.\nMay you have a great year and a wonderful time ahead, God bless you.\nHappy New Year.</item>
+        <item>Wishing you a Happy New Year with hope that you will have many blessings in the year to come.</item>
+        <item>Lighten up your surroundings with your sweet smile and make way for happiness with your good deeds this New Year. Happy New Year.</item>
+        <item>Lets celebrate this blissful, cheerful, colorful New year with a smile.\nWish you Happy new year.</item>
+        <item>I wish you spend a great year ahead that starts with happiness and ends with that too.Happy New year.</item>
+        <item>My wishes for you are not limited to just the next year but to all the years that you experience in your lifetime and in your reincarnations!\nHave a fun-filled, smashing, rocking and happening New Years!</item>
+        <item>New Year is not about changing the Dates but Direction;\nIt\'s not about changing the Calendar but Commitment;\nIt\'s not about changing the Actions but Attitude;\nIt\'s not about changing the Fruit but Faith, Force and Focus!\nMay you Commit and Create the best New Year ever!</item>
+        <item>There are a lot of things in the world yet to be seen and experienced.\nLive your life, explore new horizons, go for new adventures this New Year and you will not regret it.\nHappy New Year.</item>
+        <item>As we bring this year to an end and the New Year begins.\nLet us pray that it will be a year with New Peace,\nNew Understanding and New Happiness.</item>
+        <item>May this new year bring peace and joy in your life and take you towards excellence.\nWishing you a very happy new year.</item>
+        <item>Lets welcome the year which is fresh and new,\nLets cherish each moment it beholds,\nLets celebrate this blissful new year.</item>
+        <item>May this new year all your dreams turn into reality and all your efforts into great achievements.\nHappy New Year.</item>
     </string-array>
 
     <string-array name="new_year_gujarati_message_list">
         <item>આપને નુતન વર્ષની ખુબ ખુબ શુભકામના,આપનું આવનાર વર્ષ સ્નેહ ,ઉલ્લાસ અને પ્રફૂલ્લીતા થી પરિપૂર્ણ રહે એવી મારી અભિલાષા , આમતો પ્રત્યેક વર્ષ આપણા પ્રયાસ પર નિર્ભર છે પણ શુભ કામનાઓ આપણામાં ઉત્સાહ ,મનોબળ , અને સકારાત્મક ઉર્જાનું સિંચન કરે છે આપ સર્વ કામો સકારાત્મક દ્રષ્ટિકોણ થી કરો અને પરિણામો પણ સકારાત્મક અને સંતોષકારક બને તેવી અમારી શુભકામના.</item>
+        <item></item>
+        <item></item>
+        <item></item>
+        <item></item>
+        <item></item>
+        <item></item>
+        <item></item>
+        <item></item>
+        <item></item>
+        <item></item>
+
     </string-array>
 
     <string-array name="new_year_hindi_message_list">
         <item>New Year Hindi Messages</item>
+        <item>New Year Hindi Messages</item>
+        <item>New Year Hindi Messages</item>
+        <item>New Year Hindi Messages</item>
+        <item>New Year Hindi Messages</item>
+        <item>New Year Hindi Messages</item>
+        <item>New Year Hindi Messages</item>
+        <item>New Year Hindi Messages</item>
+        <item>New Year Hindi Messages</item>
+        <item>New Year Hindi Messages</item>
+        <item>New Year Hindi Messages</item>
+        <item>New Year Hindi Messages</item>
+        <item>New Year Hindi Messages</item>
+        <item>New Year Hindi Messages</item>
+        <item>New Year Hindi Messages</item>
+        <item>New Year Hindi Messages</item>
+        <item>New Year Hindi Messages</item>
+        <item>New Year Hindi Messages</item>
+        <item>New Year Hindi Messages</item>
+        <item>New Year Hindi Messages</item>
+        <item>New Year Hindi Messages</item>
+        <item>New Year Hindi Messages</item>
+
     </string-array>
 
     <string name="banner_home_footer">ca-app-pub-3940256099942544/6300978111</string>
