--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,11 +24,11 @@
     </string-array>
 
     <string-array name="diwali_hindi_message_list">
-        <item>Diwali Hindi Messages</item>
-        <item>Diwali Hindi Messages</item>
-        <item>Diwali Hindi Messages</item>
-        <item>Diwali Hindi Messages</item>
-        <item>Diwali Hindi Messages</item>
+        <item>आप सभी को\nदीपावली की हार्दिक\nबधाई और शुभकामनाएं!</item>
+        <item>इस दिवाली में हमारी\nकामना है कि आपका हर\nसपना पूरा हो,\nऔर आप सफलता के\nउंचे मुकाम पर हांे\nदीपावली की हार्दिक बधाई\nऔर शुभकामनाएं!</item>
+        <item>दीवाली के इस मंगल अवसर पर आप सभी की मनोकामना पूरी हों, खुशियाँ आपके कदम चूमे, इसी कामना के साथ आप सभी को दिवाली की ढेरों बधाई.</item>
+        <item>जगमग थाली सजाओ,\nमंगल दीपो को जलाओ,\nअपने घरों और दिलों में\nआशा की किरण जगाओ,\nखुशियों और समृद्धि से \nभरा हो आपका जीवन,\nइसी कामना के साथ \nशुभ दीपावली.</item>
+        <item>ये दिवाली आपके जीवन\nमें खुशियों की बरसात\nलाए,\nधन और शौहरत की\nबौछार करे,\nदिवाली की हार्दिक शुभकामनाएं!</item>
         <item>Diwali Hindi Messages</item>
         <item>Diwali Hindi Messages</item>
         <item>Diwali Hindi Messages</item>
