Diwali Hindi Messages Added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,12 +29,12 @@
         <item>दीवाली के इस मंगल अवसर पर आप सभी की मनोकामना पूरी हों, खुशियाँ आपके कदम चूमे, इसी कामना के साथ आप सभी को दिवाली की ढेरों बधाई.</item>
         <item>जगमग थाली सजाओ,\nमंगल दीपो को जलाओ,\nअपने घरों और दिलों में\nआशा की किरण जगाओ,\nखुशियों और समृद्धि से \nभरा हो आपका जीवन,\nइसी कामना के साथ \nशुभ दीपावली.</item>
         <item>ये दिवाली आपके जीवन\nमें खुशियों की बरसात\nलाए,\nधन और शौहरत की\nबौछार करे,\nदिवाली की हार्दिक शुभकामनाएं!</item>
-        <item>Diwali Hindi Messages</item>
-        <item>Diwali Hindi Messages</item>
-        <item>Diwali Hindi Messages</item>
-        <item>Diwali Hindi Messages</item>
-        <item>Diwali Hindi Messages</item>
-        <item>Diwali Hindi Messages</item>
+        <item>दीपक का प्रकाश हर\nपल आपके जीवन में\nनई रोशनी लाए,\nबस यही शुभकामना\nहै आपके लिए इस\nदीपावली में।\nशुभ दीपावली!</item>
+        <item>दीपावली आए तो\nरंगी रंगोली,\nदीप जलाए, धूम धड़ाका,\nछोड़ा पटाखा, जली फुलझडि़यां सबको भाए..\nआप सबको दीपावली की शुभकामनाएं!</item>
+        <item>दीपावली में दीपों का दीदार हो,\nऔर खुशियों की बौछार हो।\nशुभ दीपावली!</item>
+        <item>इस दिवाली में यही कामना है कि सफलता आपके कदम चूमे और खुशी आपके आसपास हो। माता लक्ष्मी की कृपा आप पर बनी रहे।</item>
+        <item>आपको आशीर्वाद मिले गणेश से विद्या मिले सरस्वती से दौलत मिले लक्ष्मी से प्यार मिले सब से दिवाली के अवसर पर यही दुआ है दिल से हैप्पी दिवाली!</item>
+        <item>श्री राम जी आपके संसार में सुख की बरसात करें,\nऔर दुखों का नाश करें प्रेम की फुलझड़ी से आपका घर आंगन रौशन हो\nआपको दीपावली की हार्दिक शुभकामनाएं!</item>
         <item>Diwali Hindi Messages</item>
         <item>Diwali Hindi Messages</item>
         <item>Diwali Hindi Messages</item>
