Diwali Hindi Messages added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,11 +35,44 @@
         <item>इस दिवाली में यही कामना है कि सफलता आपके कदम चूमे और खुशी आपके आसपास हो। माता लक्ष्मी की कृपा आप पर बनी रहे।</item>
         <item>आपको आशीर्वाद मिले गणेश से विद्या मिले सरस्वती से दौलत मिले लक्ष्मी से प्यार मिले सब से दिवाली के अवसर पर यही दुआ है दिल से हैप्पी दिवाली!</item>
         <item>श्री राम जी आपके संसार में सुख की बरसात करें,\nऔर दुखों का नाश करें प्रेम की फुलझड़ी से आपका घर आंगन रौशन हो\nआपको दीपावली की हार्दिक शुभकामनाएं!</item>
-        <item>Diwali Hindi Messages</item>
-        <item>Diwali Hindi Messages</item>
-        <item>Diwali Hindi Messages</item>
-        <item>Diwali Hindi Messages</item>
-        <item>Diwali Hindi Messages</item>
+        <item>दीपावली है पर्व दीपों का,खुशियों और आनंद का,उजाला और उल्लास कादीपावली की हार्दिक शुभकामनाएं!</item>
+        <item>दीप जलते जगमगाते रहें, हम आपको, आप हमें याद आते रहें, जब तक जिंदगी है, दुआ है हमारी कि, आप चाँद की तरह जगमगाते रहें, दिवाली की ढेरों शुभकामनाएं!</item>
+
+        <item>दीपावली आए साथ अपने खुिशयां लाए बिछड़े थे हम जिनके साथ बचपन में, फुलझडि़यां उनकी याद लाए। क्या हुआ अगर हम साथ नहीं आज उनके, उनकी याद लिए ये दीपावली तो आए। दीपावली की हार्दिक बधाई!</item>
+
+        <item>दिवाली में आपके यहां धनराशि की बरसात हो,माँ लक्ष्मी का वास हो,और संकटों का नाश हो। आप हर दिल पर राज करें और आप के घर में शांति का वास हो। हैप्पी दीपावली!</item>
+
+        <item>इस दीपावली में आप धूम मचाएं,और मौज मनाएं, आप सभी को दीपावली की बधाई </item>
+
+        <item>इस दिवाली जलाना हजारों दिये खूब करना उजाला खुशी के लिए एक कोने में एक दिया जलाना जरुर जो जले उम्र भर हमारी दोस्ती के लिए हैप्पी दिवाली! </item>
+
+        <item>आपके जीवन में सुख,शांति और समृिद्ध हमेशा बनी रहे शुभ दीपावली!</item>
+
+        <item>साल भर भले ही पड़ोसन को अपनी शक्ल ना दिखाएं..पर इस दीपावली में लड्डू, जलेबी खाने, आप उनके घर जरुर जाएं शुभ दीपावली!</item>
+
+        <item>हर खुशी, खुशी मांगे आपसे, हर जि़ंदगी, जि़ंदगी मांगे आपसे, इतना उजाला हो आपके जीवन में, कि दिया भी रोशनी मांगे आपसे हैप्पी दिवाली!</item>
+
+        <item>कुमकुम भरे कदमों से लक्ष्मीजी आपके द्वार, सुख संपत्ति मिले आपको अपार दिवाली की शुभकामनाएं करें स्वीकार विश यू हैप्पी दिवाली!</item>
+
+        <item>पूजा की थाली, रसोई में पकवान, आंगन में दीया, खुशियां हो तमाम, हाथों में फुलझडि़यां, रोशन हो जहां, मुबारक हो आपको दिवाली मेरे यार!</item>
+
+        <item>दीप जलते जगमगाते रहें,हम आपको आप हमें याद आते रहे, जब तक जि़ंदगी है, दुआ है हमारी आप चांद की तरह जगमगाते रहें, हैप्पी दिवाली!</item>
+
+        <item>यही कामना है कि दिवाली आपके जीवन में खुशियां लाए, शुभ दीपावली!</item>
+
+        <item>दीयों की रोशनी, पटाखों का धमाल, सूरज की किरणें खुशियों की बौछार, चांद की चांदनी अपनों का प्यार,मुबारक हो आपको दिवाली का त्यौहार!</item>
+
+        <item>इस दीवाली के अवसर पर हम चाहते हैं आपकी खुशी पूरे ईमान से यही दुआ है कि सब हसरतें पूरी हो आपकी,और आप मुस्कुराएं दिल-ओ-जान से!</item>
+
+        <item>दिवाली की लाइट करे सब को डिलाइट पकड़ो मस्ती की फ्लाइट और धूम मचाओ आॅल नाइट हैप्पी दिवाली!</item>
+
+        <item>दीयों से रोशन हो आपके घर द्वार,खुशियां आएं बार बार, सफलता हर दम करे आपका इंतज़ार, शुभ कामनाओं के साथ मनाओ दिवाली का त्यौहार</item>
+
+        <item> श्री राम जी आपके दुखों का नाश करें और आपके जीवन में सुख लाएं, रोशनी के दीये आपके घर में खुशहाली लाएं,\nदीपावली की हार्दिक शुभकामनाएं!</item>
+
+        <item>इस दिवाली पर हमारी कामना है कि आपका हर सपना पूरा हो और आप सफलता के उंचे मुकाम पर पहुंचे दीपावली की शुभकामनाएं आपको और आपके अपनों को।</item>
+
+        <item>मैं अपना मन केवल पूजा, अर्चना, आरती,\nसाधना, भक्ति, भावना में ही लगाना चाहता हूं,\nआपका क्या प्लान है?</item>
 
     </string-array>
 
