Diwali Gujarati Added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,14 +18,14 @@
     <string-array name="diwali_gujarati_message_list">
         <item>આપને મારા તરફથી દિવાળી ની ખુબ ખુબ શુભેચ્છા..</item>
         <item>આપ સહુને દિવાળીની ખૂબ ખૂબ શુભેચ્છાઓ સહ, નવા વર્ષે ઉગતા  સૂર્યનાં, પ્રકાશિત કિરણોથી ભરપુર, મંગલ જીવન હો, એવી પ્રભુ પાસે અભ્યર્થના …!..જયશ્રીકૃષ્ણ.</item>
-        <item>આપને મારા તરફથી દિવાળી ની ખુબ ખુબ શુભેચ્છા..</item>
-        <item>આપને મારા તરફથી દિવાળી ની ખુબ ખુબ શુભેચ્છા..</item>
-        <item>આપને મારા તરફથી દિવાળી ની ખુબ ખુબ શુભેચ્છા..</item>
+        <item>દીપાવલીના દીપ આપણા અંતરને ઝગમગાવી, ઉત્સાહ અને આનંદ સાથે પરસ્પર સ્નેહના સમ્બન્ધો વીકસાવી, પ્રેમ અને આનંદ વહેંચવાનું પર્વ બની રહો એવી શુભેચ્છાઓ..</item>
+        <item>દિવાળીના દીવડાઓ તમારા અંતરને ઝગમગાવે …\nઆંગણે પૂરેલા સાથિયાઓ મિત્રો અને સ્નેહીઓ વચ્ચે આત્મીયતાને વિકસાવે \nદિવાળી માત્ર ફટાકડા અને મીઠાઈ પૂરતું સિમીત ન રહેતાં\nપ્રેમ અને આનંદ વહેંચવાનું પર્વ બને એવી હાર્દિક શુભેચ્છા.</item>
+        <item>આપને તેમજ આપના પરિવારજનોને દીપાવલીના પર્વની શુભ કામના અને નુતન વર્ષાભિનંદન.\nનવું વર્ષ આપની આશા ઉમંગોને પરિપૂર્ણ કરી અનેરી સિધ્ધિઓ અર્પી સફળતાના શિખરો સર કરાવી દ્રઢ મનોબળ સુખ સંપતિ અને તંદુરસ્ત આરોગ્ય બક્ષે એવી અપેક્ષા.</item>
     </string-array>
 
     <string-array name="diwali_hindi_message_list">
         <item>आप सभी को\nदीपावली की हार्दिक\nबधाई और शुभकामनाएं!</item>
-        <item>इस दिवाली में हमारी\nकामना है कि आपका हर\nसपना पूरा हो,\nऔर आप सफलता के\nउंचे मुकाम पर हांे\nदीपावली की हार्दिक बधाई\nऔर शुभकामनाएं!</item>
+        <item>इस दिवाली में हमारी\nकामना है कि आपका हर\nसपना पूरा हो,\nऔर आप सफलता के\nउंचे मुकाम पर हों\nदीपावली की हार्दिक बधाई\nऔर शुभकामनाएं!</item>
         <item>दीवाली के इस मंगल अवसर पर आप सभी की मनोकामना पूरी हों, खुशियाँ आपके कदम चूमे, इसी कामना के साथ आप सभी को दिवाली की ढेरों बधाई.</item>
         <item>जगमग थाली सजाओ,\nमंगल दीपो को जलाओ,\nअपने घरों और दिलों में\nआशा की किरण जगाओ,\nखुशियों और समृद्धि से \nभरा हो आपका जीवन,\nइसी कामना के साथ \nशुभ दीपावली.</item>
         <item>ये दिवाली आपके जीवन\nमें खुशियों की बरसात\nलाए,\nधन और शौहरत की\nबौछार करे,\nदिवाली की हार्दिक शुभकामनाएं!</item>
