new year gu added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,16 +96,32 @@
 
     <string-array name="new_year_gujarati_message_list">
         <item>આપને નુતન વર્ષની ખુબ ખુબ શુભકામના,આપનું આવનાર વર્ષ સ્નેહ ,ઉલ્લાસ અને પ્રફૂલ્લીતા થી પરિપૂર્ણ રહે એવી મારી અભિલાષા , આમતો પ્રત્યેક વર્ષ આપણા પ્રયાસ પર નિર્ભર છે પણ શુભ કામનાઓ આપણામાં ઉત્સાહ ,મનોબળ , અને સકારાત્મક ઉર્જાનું સિંચન કરે છે આપ સર્વ કામો સકારાત્મક દ્રષ્ટિકોણ થી કરો અને પરિણામો પણ સકારાત્મક અને સંતોષકારક બને તેવી અમારી શુભકામના.</item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>આજ મુબારક…\n
+કાલ મુબારક…\n
+સૌને મારા વ્હાલ મુબારક…\n
+સૌને મારા સાલ મુબારક…\n
+\n
+સાલ મુબારક જય શ્રી કૃષ્ણ!!</item>
+        <item>જ્યારે મળીએ, જે દિ\' મળીએ ત્યારે તે દિ\' નવું વરસ\n
+મતલબ કે કો\' મનથી મળવા ધારે તે દિ\' નવું વરસ\n
+\n
+ખાસ્સા ત્રણસો પાંસઠ દિ\'નો વાર્ષિક ગાળો ધરા ઉપર\n
+હું તો માનું : ક્ષણ જ્યારે પડકારે તે દિ\' નવું વરસ\n
+\n
+ચહેરા પર રંગોળી, રોમેરોમે દીપક ઝળાહળા\n
+માણસ-માણસ રોશન બનશે જ્યારે તે દિ\' નવું વરસ\n
+\n
+આળસ, જઈને પેસી ગઈ હોય સૂરજના પણ સ્વભાવમાં\n
+એવી આળસ કવિતા સામે હારે તે દિ\' નવું વરસ\n
+\n
+દરિયો કેવળ નિજમસ્તીનો જોખમકારક બની શકે\n
+તરવૈયાઓ એકબીજાને તારે તે દિ\' નવું વરસ\n
+\n
+ઈશ્વરનું આપેલું હૈયું ફળિયું શાને બને નહિં ?\n
+આ જ પ્રશ્ન પર લોકો સ્હેજ વિચારે તે દિ\' નવું વરસ </item>
+        <item>આપ સૌ ને નુતન વર્ષ ના હાર્દિક અભિનંદન…………..નવા વર્ષની શરુઆત હર્ષ , આનન્દ અને ઉલ્લાસ થી થાય એવી શુભ કામના</item>
+        <item>નૂતન વર્ષાભિનંદન.\n
+આ નવું વર્ષ આપ સૌને સુખદાયી, ફળદાયી અને સફળ નીવડે તેવી પ્રભુને પ્રાર્થના.</item>
 
     </string-array>
 
