New year hindi added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -126,28 +126,44 @@
     </string-array>
 
     <string-array name="new_year_hindi_message_list">
-        <item>New Year Hindi Messages</item>
-        <item>New Year Hindi Messages</item>
-        <item>New Year Hindi Messages</item>
-        <item>New Year Hindi Messages</item>
-        <item>New Year Hindi Messages</item>
-        <item>New Year Hindi Messages</item>
-        <item>New Year Hindi Messages</item>
-        <item>New Year Hindi Messages</item>
-        <item>New Year Hindi Messages</item>
-        <item>New Year Hindi Messages</item>
-        <item>New Year Hindi Messages</item>
-        <item>New Year Hindi Messages</item>
-        <item>New Year Hindi Messages</item>
-        <item>New Year Hindi Messages</item>
-        <item>New Year Hindi Messages</item>
-        <item>New Year Hindi Messages</item>
-        <item>New Year Hindi Messages</item>
-        <item>New Year Hindi Messages</item>
-        <item>New Year Hindi Messages</item>
-        <item>New Year Hindi Messages</item>
-        <item>New Year Hindi Messages</item>
-        <item>New Year Hindi Messages</item>
+        <item>हर साल आता है, हर साल जाता है;
+इस नये साल में आपको वो सब मिले;
+जो आपका दिल चाहता है।
+नया साल मुबारक।</item>
+        <item>सबके दिलों में हो सबके लिए प्यार;
+आनेवाला हर दिन लाये खुशियों का त्यौहार;
+इस उम्मीद का साथ आओ भूलके सारे गम;
+न्यू इयर को हम सब करें वेलकम।</item>
+        <item>नों दिन तेरी खुशियाँ हो जायें दोगुनी;
+तेरी जिंदगी से मिट जायें सभी गम;
+खुदा रखे तुझे हमेशा स्मार्ट और तंदरुस्त;
+तेरे लिए नया साल हो सुपर-डुपर हिट।</item>
+        <item>इस नये साल में जो तू चाहे वो तेरा हो;
+हर दिन खूबसूरत और राते रोशन हो;
+नया साल तेरा पुराने साल से सुनहरा हो;
+तुझे मेरे यार नया साल मुबारक हो।</item>
+        <item>पुराना साल सबसे हो रहा है दूर;
+क्या करें यही है कुदरत का दस्तूर;
+पुरानी यादें सोचकर उदास ना होना तुम;
+नया साल आया है चलो....
+धूम मचा लो-धूम मचा लो, धूम।</item>
+        <item>सुख-शान्ति एवं समृद्धि की मंगलकामनाओं के साथ आप एवं आपके परिजनों को नव वर्ष की हार्दिक शुभकामनायें।</item>
+        <item>नया साल मुबारक हो तुम्हे
+इसकी रंगे बहार मुबारक हो तुम्हे
+अंजुमन तुम्हारा खुशियों से खिले
+खुशियों का इंतज़ार मुबारक हो तुम्हे ।</item>
+        <item>आने वाले साल में और आगे भी हमेशा जीवन में सब कुछ अच्छा हो। नया साल मुबारक!</item>
+        <item>आपका नया साल प्यार, शांति और खूबसूरत यादों से भर जाए ऐसी आशा है!!</item>
+        <item>इस नए साल की नई शुरुआत के मौके पर प्यार, खुशियों, शांति और उत्साह का तोहफा आपका हो!!</item>
+        <item>आशा है जीवन की छोटी छोटी खुशियों के जश्न मनाने और आनंद लेने का अवसर मिले। नया साल मुबारक!!</item>
+        <item>उम्मीद है आपका नया साल और आगे आने वाला समय बेहतरीन हो। नया साल मुबारक!!</item>
+        <item>आने वाले साल में आपको नई उम्मीदें, इच्छाएं और इरादें मिले ऐसी आशा है। नया साल मुबारक हो!!</item>
+        <item>आने वाले साल में आपको अच्छी सेहत, खुशियां और आनंद मिले। नया साल मुबारक!!</item>
+        <item>नया साल आपके जीवन में सफलता, सौभाग्य और खुशियां लेकर आए। यह साल बीते हुए साल से भी ज्यादा समृद्ध हो। नया साल मुबारक!!</item>
+        <item>शांति, खुशहाली और दोस्ती से भरे नए साल के लिए मेरी ओर से बहुत सारी शुभकामनाएं!!</item>
+        <item>आशा है कि नया साल आपके जीवन को खुशियों और उज्जवल उत्साह से भर दे। आपके लिए नया साल खुशियों भरा हो।</item>
+        <item>नया साल एक और मौका है यह कहने का कि मुझे हमेशा आप से ये दोस्ती बनाए रखना है। नया साल मुबारक!!
+जैसे यह दुनिया नई शुरुआत करें, हम हमारी दोस्ती का जश्न मनाएं और हमारा एक शानदार नया साल हो</item>
 
     </string-array>
 
