--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Send Greeting</string>
-    <string name="title_activity_share">Send Greeting</string>
+    <string name="app_name">Greeting</string>
+    <string name="title_activity_share">Greeting</string>
     <string-array name="diwali_english_message_list">
         <item>Millions of lamps are illuminating to declare the victory of light,\nI wish you happy diwali with endless happiness and prosperity.\nHappy Diwali to You.</item>
         <item>Wish you A happy diwali filled with fun and happiness.</item>
